Implementado los movimientos, tu que tienes?

--- a/Mio/nombre-de-tu-proyecto/src/styles/leftStyles.css
+++ b/Mio/nombre-de-tu-proyecto/src/styles/leftStyles.css
@@ -4,9 +4,9 @@
     bottom: 0;
     top: calc(var(--size-head) + 5px);
     position:fixed;
-    width: 40%;
+    width: 50%;
     height: auto;
-    overflow:auto; /*Como interactua los elementos dentro de un div con el div padre*/
+    overflow:hidden; /*Como interactua los elementos dentro de un div con el div padre*/
                   /**
                   *Visible: Default, if the elements overflow the main div, they overlap other elements outside the parent div
                   *Hiden: Same as visible, but the elements overflow the main div, only are visible inside their parent div 
@@ -14,8 +14,6 @@
                   *Auto: same as Scroll, but only show the scroll bars where is necesary
                   *Overflow-x and -y: only control the overflow at one direction
                   */
-
-    font-size: 2em;
   }
   
   .left .cardMedia{
@@ -24,8 +22,32 @@
   }
   
   .cardsBundle{
+    overflow: scroll;
+    overflow-x: hidden;
+
+    height: 70%;
+    margin-top:20px;
     padding: 7%;
     padding-left: 10%;
+    bottom: 0;
+  }
+
+  .cardsBundle::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .cardsBundle::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
+  .cardsBundle::-webkit-scrollbar-thumb {
+    background-color:rgb(177, 228, 229);
+    border-radius: 20px;
+    border: 2px solid #f1f1f1;
+  }
+  
+  .cardsBundle:-webkit-scrollbar-thumb:hover {
+    background-color: rgb(177, 228, 229);
   }
   
   /*To make a separation between cards i made this style*/
@@ -34,4 +56,9 @@
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
+  }
+
+  .alignCenterTransform{
+    margin-left: 50%;
+    transform: translateX(-50%);
   }
