Start and reset button finished

--- a/Mio/nombre-de-tu-proyecto/src/index.css
+++ b/Mio/nombre-de-tu-proyecto/src/index.css
@@ -21,6 +21,7 @@
   bottom: 50%;/*when you indicate the distance of the element, css will use the most near border of the element as the reference*/
   transform: translateY(50%);/*if you want yo fix distance, that code move the element without touching the margins */
   left: 3%;
+  cursor:pointer;
 }
 
 
