--- a/Mio/pokedex/src/styles/leftStyles.css
+++ b/Mio/pokedex/src/styles/leftStyles.css
@@ -59,6 +59,6 @@
   }
 
   .alignCenterTransform{
-    margin-left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
+    overflow: hidden;
   }
